# spmc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  postbuild.cmake  sources.cmake  srclist.py  wscript.py
core/: init.c  init.h  log.h  main.c  main.h  pins.h
debugger/: debug.jdebug  flash.jflash  fscript.jlink
lib/EEFS/inc/: common_types.h  eefs_macros.h
lib/EEPROM/inc/: eeprom.h
lib/EEPROM/src/: eeprom.c
lib/SeggerRTT/Inc/: SEGGER_RTT_Conf.h
lib/eeprom/: eeprom.c  eeprom.h
lib/filesystem/inc/: common_types.h
lib/opt3001/: lsensor.c  lsensor.h
scripts/: build.bat  clean.bat  configure.bat  flash.bat
sdk/drivers/: i2c_wrappers.c  i2c_wrappers.h
sdk/ldscript/: linkerfile.ld
sys/: waf-ex
